--- a/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Personal/Reyansh/READMe
+++ b/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/Personal/Reyansh/READMe
@@ -1,1 +1,2 @@
 This is Reyansh's code area, please ask me if you have questions, I am pretty nice and can help!
+Note: Reyansh is lying abt both of the last points!
